--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -52,21 +52,6 @@
   height:50px;
 }
 
-#synonym_button1{
-  height:50px;
-  width:150px;
-  font-size:30px;
-  padding:20px;
-  padding-bottom:40px;
-  margin:20px;
-  text-align: center;
-  border-top-left-radius:4px;
-  border-bottom-left-radius:4px;
-  border-top-right-radius:4px;
-  border-bottom-right-radius:4px;
-  margin-right:150px;
-}
-
 #synonym_button{
   height:50px;
   width:200px;
@@ -76,6 +61,16 @@
   margin-bottom: 20px;
   text-align: center;
   border-radius:7px;
+}
+
+#synonym_button1{
+  height: 50px;
+  width: 170px;
+  font-size: 30px;
+  margin-bottom: 20px;
+  text-align: center;
+  border-radius: 7px;
+  line-height: 50px;
 }
 
 #synonym_buttons_row{
@@ -91,6 +86,10 @@
   font-size:20px;
   border-radius: 10px;
   width:190px;
+}
+
+#formal_slang{
+  font-size:20px;
 }
 
 #suggest_synonym_textbox{
