--- a/arability/app/views/games/_vote.html.erb
+++ b/arability/app/views/games/_vote.html.erb
@@ -32,12 +32,12 @@
 		<% while syn_list.size>0  && j<syn_list.length %>
 		<tr>
 			<td style="width:350px; text-align:center;">
-				<button data-trigger="manual" data-content="<%= t(:formal_or_slang) %>" data-title="<button type='button' class='close' data-dismiss='modal' aria-hidden='true' onclick='destroy(this.id)'>×</button>" data-placement="bottom" class="btn btn-success" id="synonym_button" data-html="true" type="submit" onclick="check_formality('<%= syn_list[j].id%>', '<%= syn_list[j].is_formal %>')"><%= syn_list[j].name %></button>
+				<button data-trigger="manual" data-content="<%= t(:formal_or_slang) %>" data-title="<button type='button' class='close' data-dismiss='modal' aria-hidden='true' onclick='destroy(this.id)'>×</button>" data-placement="bottom" class="btn btn-success" id="synonym_button<%=j%>" data-html="true" type="submit" onclick="check_formality('<%= syn_list[j].id%>', '<%= syn_list[j].is_formal %>','<%= j %>')"><%= syn_list[j].name %></button>
 				<% j = j+1 %>
 			</td>
 			<td style="width:350px; text-align:center;">
 				<% if j<syn_list.length %>
-					<button data-trigger="manual" data-content="<%= t(:formal_or_slang) %>" data-title="<button type='button' class='close' data-dismiss='modal' aria-hidden='true' onclick='destroy(this.id)'>×</button>" data-placement="bottom" class="btn btn-success" id="synonym_button" data-html="true" type="submit" onclick="check_formality('<%= syn_list[j].id%>', '<%= syn_list[j].is_formal %>')"><%= syn_list[j].name %></button>
+					<button data-trigger="manual" data-content="<%= t(:formal_or_slang) %>" data-title="<button type='button' class='close' data-dismiss='modal' aria-hidden='true' onclick='destroy(this.id)'>×</button>" data-placement="bottom" class="btn btn-success" id="synonym_button<%=j%>" data-html="true" type="submit" onclick="check_formality('<%= syn_list[j].id%>', '<%= syn_list[j].is_formal %>','<%= j %>')"><%= syn_list[j].name %></button>
 					<% j = j+1 %>
 				<% end  %>
 			</td>
@@ -75,13 +75,29 @@
 	</table>
 </div>
 <script type="text/javascript">
-function check_formality(syn_id, syn_is_formal){
+function check_formality(syn_id, syn_is_formal,j){
 	if(syn_is_formal == "true" || syn_is_formal == "false" ){
 		record_vote(syn_id);
 	}
 	else{
-		$('#synonym_button').popover({'title':"<p style='font-size:20px; font-weight:bold;'>Is this translation <button type='button' class='close' data-dismiss='modal' aria-hidden='true' onclick='destroy(this.id)'>×</button></p>"});
-		$('#synonym_button').popover('show');
+		$('#synonym_button0').popover('destroy');
+		$('#synonym_button1').popover('destroy');
+		$('#synonym_button2').popover('destroy');
+		$('#synonym_button3').popover('destroy');
+		this_id = 'synonym_button'+j;
+		var title = []
+		title.push("<span style='font-weight:bold; font-size:20px; text-align:center;'><%= t(:is_this_translation)%>");
+		title.push("<button type='button' class='close' data-dismiss='modal' aria-hidden='true' onclick='hide()'>×</button></p>");
+		title.join();
+		$('#synonym_button'+j).popover({'title':title});
+		$('#synonym_button'+j).popover('show');
 	}
+}
+function hide(){
+	$('#synonym_button0').popover('destroy');
+	$('#synonym_button1').popover('destroy');
+	$('#synonym_button2').popover('destroy');
+	$('#synonym_button3').popover('destroy');
+
 }
 </script>
