--- a/arability/app/views/games/record_vote.js.erb
+++ b/arability/app/views/games/record_vote.js.erb
@@ -1,2 +1,2 @@
-<% current_gamer.select_synonym(params[:synonym_id]) %>
+<% current_gamer.select_synonym(params[:synonym_id], params[:is_formal]) %>
 display_next_word();
