--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -1,8 +1,8 @@
 var words=get_words();
 var translation="";
 
-function record_vote(syn_id){
-	$.post("/games/record_vote", {synonym_id: syn_id } );
+function record_vote(syn_id, is_formal){
+	$.post("/games/record_vote", {synonym_id: syn_id, is_formal:is_formal } );
 }
 
 function display_next_word(){
