--- a/arability/app/views/games/_vote.html.erb
+++ b/arability/app/views/games/_vote.html.erb
@@ -33,7 +33,7 @@
 		<tr>
 			<td style="width:350px; text-align:center;">
 				<% if syn_list[j].is_formal == nil %>
-					<button data-trigger="manual" data-content="<%= t(:formal_or_slang) %>" data-title="<button type='button' class='close' data-dismiss='modal' aria-hidden='true' onclick='destroy(this.id)'>×</button>" data-placement="bottom" class="btn btn-success" id="synonym_button<%=j%>" data-html="true" type="submit" onclick="check_formality('<%= syn_list[j].id%>', '<%= syn_list[j].is_formal %>','<%= j %>')"><%= syn_list[j].name %></button>
+					<button data-trigger="manual" data-content="<%= t(:formal_or_slang) %>" data-placement="bottom" class="btn btn-success" id="synonym_button<%=j%>" data-html="true" type="submit" onclick="check_formality('<%= syn_list[j].id%>', '<%= syn_list[j].is_formal %>','<%= j %>')"><%= syn_list[j].name %></button>
 				<% else %>
 					<button class="btn btn-success" id="synonym_button" type="submit" onclick="record_vote('<%= syn_list[j].id%>','nil')"><%= syn_list[j].name %></button>
 				<% end %>
@@ -42,7 +42,7 @@
 			<td style="width:350px; text-align:center;">
 				<% if j<syn_list.length %>
 					<% if syn_list[j].is_formal == nil %>
-						<button data-trigger="manual" data-content="<%= t(:formal_or_slang) %>" data-title="<button type='button' class='close' data-dismiss='modal' aria-hidden='true' onclick='destroy(this.id)'>×</button>" data-placement="bottom" class="btn btn-success" id="synonym_button<%=j%>" data-html="true" type="submit" onclick="check_formality('<%= syn_list[j].id%>', '<%= syn_list[j].is_formal %>','<%= j %>')"><%= syn_list[j].name %></button>
+						<button data-trigger="manual" data-content="<%= t(:formal_or_slang) %>" data-placement="bottom" class="btn btn-success" id="synonym_button<%=j%>" data-html="true" type="submit" onclick="check_formality('<%= syn_list[j].id%>', '<%= syn_list[j].is_formal %>','<%= j %>')"><%= syn_list[j].name %></button>
 					<% else %>
 						<button class="btn btn-success" id="synonym_button" type="submit" onclick="record_vote('<%= syn_list[j].id%>','nil')"><%= syn_list[j].name %></button>
 					<% end %>
@@ -58,13 +58,14 @@
 				<input type="text" id="suggest_synonym_textbox" placeholder="<%= t(:enter_a_synonym)%>" >
 			</td>
 			<td style="text-align:center; width:230px;">
-				<select style="width:120px;" id="select_formality">
+				<select style="width:170px;" id="select_formality">
+					<option value="nil"><%= t(:choose_formality) %></option>
 					<option value="formal"><%= t(:formal) %></option>
 					<option value="slang"><%= t(:slang) %></option>
 				</select>
 			</td>
 			<td style="text-align:center; width:230px;">
-				<button class="btn btn-primary" type="submit" id="suggest_synonym_button" onclick="suggest_synonym_to_word(<% if keyword %><%= keyword.id %><% end %>);"><%= t(:suggest_this_synonym)%></button>
+				<button class="btn btn-primary" type="submit" id="suggest_synonym_button" onclick="suggest_synonym_to_word(<% if keyword %><%= keyword.id %><% end %>, $('#select_formality option:selected').val())"><%= t(:suggest_this_synonym)%></button>
 			</td>
 		</tr>
 		<tr>
@@ -95,12 +96,14 @@
 			$('#synonym_button2').popover('destroy');
 			$('#synonym_button3').popover('destroy');
 			this_id = 'synonym_button'+j;
+			var translation = "<%= t(:is_this_translation) %>"
 			var title = []
-			title.push("<span style='font-weight:bold; font-size:20px; text-align:center;'><%= t(:is_this_translation)%>");
+			title.push("<p>"+translation);
 			title.push("<button type='button' class='close' data-dismiss='modal' aria-hidden='true' onclick='hide()'>×</button></p>");
 			title.join();
 			$('#synonym_button'+j).popover({'title':title});
 			$('#synonym_button'+j).popover('show');
+			$('.popover').width(250);
 		}
 	}
 	function hide(){
@@ -110,11 +113,11 @@
 		$('#synonym_button3').popover('destroy');
 	}
 	function choose_formal_and_vote(){
-		var synonym_id = $("%choosen_synonym_id").val();
+		var synonym_id = $("#choosen_synonym_id").val();
 		record_vote(synonym_id,"formal");
 	}
 	function choose_slang_and_vote(){
-		var synonym_id = $("%choosen_synonym_id").val();
+		var synonym_id = $("#choosen_synonym_id").val();
 		record_vote(synonym_id,"slang");
 	}
 </script>
