--- a/arability/app/assets/stylesheets/bootstrap-rtl-overrides.css.scss
+++ b/arability/app/assets/stylesheets/bootstrap-rtl-overrides.css.scss
@@ -219,3 +219,7 @@ background-position: -96px -96px;
 .icon-filter                  { background-position: -408px -144px; }
 .icon-briefcase               { background-position: -432px -144px; }
 .icon-fullscreen              { background-position: -456px -144px; }
+
+.btn {
+  font-size: 18px;
+}
