--- a/arability/app/views/search/_synonym_results.html.erb
+++ b/arability/app/views/search/_synonym_results.html.erb
@@ -4,7 +4,7 @@
       <div class="accordion-heading">
         <div class="row">
           <div class="span12">
-            <div class="accordion-toggle" style="padding-bottom:30px;">
+            <div class="accordion-toggle" style="padding-bottom:30px;cursor: default">
               <div id="synonyms<%= synonym.id %>" class="pull-left">
                 <span class="span2">
                   <%= synonym.name %>
@@ -17,7 +17,6 @@
                   <% end %>
                 </i></span>
               </div>
-
               <div id="buttons<%= synonym.id %>" class="pull-right">
                 <% if @votes[synonym.id] != nil %>
                 <button id="bstats<%= synonym.id %>" class="btn btn-mini" style="display:inline;" data-toggle="collapse" href="#collapse<%= synonym.id %>" onClick="reduce_div_height()">
@@ -90,29 +89,41 @@
               <div class="row-fluide">
                 <div class="span2">    
                   <%= high_chart("gender_#{synonym.id}", charts[0]) do |c| %>
-                          <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+ this.y +'%';}"  %>
+                      <% if I18n.locale == :ar %>
+                          <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+'<p>'+ '%'+ this.y +'</p>';}"  %>
+                      <% else %>
+                          <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+ this.y +' %';}"  %>
+                      <% end %>
                           <%= raw "options.plotOptions.pie.dataLabels.formatter = function() { if (this.y > 5) return this.point.name; }"  %>
                   <% end %>
                 </div>
                 <div class="span2">    
                   <%= high_chart("country_#{synonym.id}", charts[1]) do |c| %>
+                      <% if I18n.locale == :ar %>
+                          <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+'<p>'+ '%'+ this.y +'</p>';}"  %>
+                      <% else %>
                           <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+ this.y +' %';}"  %>
+                      <% end %>
                           <%= raw "options.plotOptions.pie.dataLabels.formatter = function() { if (this.y > 5) return this.point.name; }"  %>
                   <% end %>
                 </div>
                 <div class="span2">    
                   <%= high_chart("age_#{synonym.id}", charts[2]) do |c| %>
-                          <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+ this.y +' %';}" %>
+                          <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+ this.y +' %';}"  %>
                           <%= raw "options.plotOptions.pie.dataLabels.formatter = function() { if (this.y > 5) return this.point.name; }"  %>
                   <% end %>
                 </div>
                 <div class="span2">    
                   <%= high_chart("education_#{synonym.id}", charts[3]) do |c| %>
+                      <% if I18n.locale == :ar %>
+                          <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+'<p>'+ '%'+ this.y +'</p>';}"  %>
+                      <% else %>
                           <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+ this.y +' %';}"  %>
+                      <% end %>
                           <%= raw "options.plotOptions.pie.dataLabels.formatter = function() { if (this.y > 5) return this.point.name; }"  %>
                   <% end %>
                 </div>
-             </div>
+              </div>
             </div>
             </div>
             <% end %>
