--- a/arability/app/views/devise/registrations/new_social.html.erb
+++ b/arability/app/views/devise/registrations/new_social.html.erb
@@ -18,7 +18,11 @@
         <div class="control-group success">
             <div class="controls">
                 <%= f.label t(:email), :class => "control-label" %>
+                <% if @provider == "twitter" %>
+                <%= f.email_field :email, :style => "margin-left: 10px;", :value => @email, :id => "inputSuccess"  %>
+                <% else %>
                 <%= f.email_field :email, :style => "margin-left: 10px;", :value => @email, :readonly => "readonly", :id => "inputSuccess"  %>
+                <% end %>
             </div>
         </div></br>
 
