--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -28,9 +28,6 @@
                 <%= f.password_field :password, style: "margin-bottom: 15px;", placeholder: t(:password), size: "30" %>
                 <%= f.submit t(:sign_in), style: "clear: left; width: 100%; height: 32px; font-size: 13px;", :class => "btn btn-primary" %>
 
-                <%= link_to image_tag("/assets/sign-in-with-twitter-link.png"),
-                 "/auth/twitter", style: "font-size: 13px",:class => "btn" %>
-                 
                 <div style="padding-top:5px; text-align:center; font-style:italic;">
                   <span><%= t(:or) %></span>
                 </div>
@@ -42,7 +39,7 @@
                     <img src="/assets/facebook-lgn.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
                   </a>
                   <a href="/auth/twitter" style="width:50px; padding:0px;margin:0px; display:inline-block;">
-                    <img src="/assets/twitter-lgn.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
+                    <img src="/assets/twitter-lgn.jpg" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
                   </a>
                   <a href="#" style="width:50px; padding:0px;margin:0px; display:inline-block;">
                     <img src="/assets/google_64.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
