--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -8,7 +8,9 @@
 <div class="tabbable"> <!-- Only required for left/right tabs -->
   <ul class="nav nav-tabs">
     <li class="active"><a href="#tab1" data-toggle="tab"><%= t(:my_info)%></a></li>
+    <% if !current_gamer.password.nil? %>
     <li><a href="#tab2" data-toggle="tab"><%= t(:social_media)%></a></li>
+    <% end %>
   </ul>
   <div class="tab-content" style="width:1200px;">
     <div class="tab-pane active" id="tab1">
