--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -49,6 +49,7 @@
   {
     Yamli.yamlify( "suggest_synonym_textbox", { settingsPlacement: "inside" } );
     Yamli.yamlify( "suggest_synonym_textbox_arabic", { settingsPlacement: "inside" } );
+    // to add yamli in any textbox just copy the above line and put the id of your textbox between " "(e.g Yamli.yamlify( "textbox_id", { settingsPlacement: "inside" } );)
   }
 </script>
 <!-- YAMLI CODE END -->
