--- a/arability/app/views/search/_synonym_results.html.erb
+++ b/arability/app/views/search/_synonym_results.html.erb
@@ -9,13 +9,37 @@
                 <span class="span2">
                   <%= synonym.name %>
                 </span>
-                <span class="span2" style="color:#bbb;"><i>
+                <span class="span2">
                   <% if @votes[synonym.id] != nil %>
-                    <%= @votes[synonym.id].to_s + " " + t(:out_of) + " " + @total_votes.to_s + " " + t(:votes) %>
+                    <div class="progress progress-info" style="margin-bottom:0px; height: 10px; 
+                      margin-top: 5px;">
+                      <% percentage = (@votes[synonym.id]*100)/@total_votes %>
+                      <div class="bar" style="width: <%= "#{percentage}" %>%;"></div>
+                      <script type="text/javascript">
+                      $(".progress").tooltip({
+                        trigger: "hover",
+                        placement: "top",
+                        title: "<%= @votes[synonym.id].to_s + " " + t(:out_of) + " " + @total_votes.to_s + " " + t(:votes) %>"
+                      })
+                      </script>
+                    </div>
+                    <% @votes[synonym.id].to_s + " " + t(:out_of) + " " + @total_votes.to_s + " " + t(:votes) %>
                   <% else %>
-                    <%= "0 " + t(:out_of) + " " + @total_votes.to_s + " " + t(:votes) %> 
+                    <div class="progress progress-info" style="margin-bottom:0px; height: 10px; 
+                      margin-top: 5px;">
+                      <div class="bar" style="width: 0%;" ></div>
+                    </div>
+                    <script type="text/javascript">
+                      $(".progress").tooltip({
+                        trigger: "hover",
+                        placement: "top",
+                        title: "<%= "0 " + t(:out_of) + " " + @total_votes.to_s + " " + t(:votes) %>"
+                      })
+                      </script>
                   <% end %>
-                </i></span>
+                </span>
+                <span class="span1" style="color:#bbb; font-style:italic; margin-left:7px; margin-right:7px;">
+                  <%= t(:votes) %></span>
               </div>
 
               <div id="buttons<%= synonym.id %>" class="pull-right">
