[issue #177][fixed] fixed scenario

--- a/arability/app/views/follow/list_followed.html.erb
+++ b/arability/app/views/follow/list_followed.html.erb
@@ -18,6 +18,7 @@
 </table>  
 </div>
 <% else %>
+<div class="well" style="font-weight: bold; text-align:center;"><%= t(:follow_words_info)%></div>
 <h4><%= t(:no_followed_words) %></h4>
 <% end %>
 
