--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -4,6 +4,7 @@
   var words;
   var cache = "";
   var nav_locked = false;
+  var JsLocale = "<%= I18n.locale %>";
 
   function setWordsArray(){
     for(var x=0; x < successfulWords.length;x++){
