--- a/arability/app/views/guest/sign_up.html.erb
+++ b/arability/app/views/guest/sign_up.html.erb
@@ -40,7 +40,7 @@
     <% if @errors != nil %>
       <%if @errors.is_a?(Hash)%>
         <ul>
-          <div class="alert">
+          <div class="validation">
             <% @errors.each do |error| %>
               <li>
                 <% if error[0] == "date_of_birth" %>
@@ -83,7 +83,7 @@
         </ul>
       <%else%>
         <ul>
-          <div class="alert">
+          <div class="validation">
             <% @errors.each do |error| %>
               <li><%=error%></li>
             <%end%>
