--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -8,9 +8,7 @@
 <div class="tabbable"> <!-- Only required for left/right tabs -->
   <ul class="nav nav-tabs">
     <li class="active"><a href="#tab1" data-toggle="tab"><%= t(:my_info)%></a></li>
-    <% if !current_gamer.password.nil? %>
     <li><a href="#tab2" data-toggle="tab"><%= t(:social_media)%></a></li>
-    <% end %>
   </ul>
   <div class="tab-content" style="width:1200px;">
     <div class="tab-pane active" id="tab1">
@@ -137,9 +135,12 @@
     <div class="tab-pane" id="tab2">
       <div class="well" style="width:1100px; height:480px">
 
+        <% if current_gamer.provider != "facebook" %>
         <div class="Facebook" style="width: 344px;margin-right: auto;margin-left: auto;">
         </div>
+        <% end %>
 
+        <% if current_gamer.provider != "twitter" %>
         <div class="Twitter" style="width: 344px;margin-right: auto;margin-left: auto;">
           <% if Authentication.exists?(gamer_id: current_gamer.id, provider: "twitter") %>
           <h5>
@@ -154,6 +155,7 @@
           </span>
           <% end %>
         </div>
+        <% end %>
 
       </div>
     </div>
