--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -47,6 +47,67 @@ function update_errors(record_output){
 	}
 }
 
+function modalToggle(){
+  $("#report_modal").modal("toggle");
+}
+function setChecked(chkbox){
+  $chkbox = $(chkbox)
+  if($chkbox.attr("is_checked") == "true")
+    $chkbox.attr("is_checked", false);
+  else
+    $chkbox.attr("is_checked", true);
+}
+function report_submission(){
+  $reported_keywords = $("#report_modal").find("[is_checked=true]");
+  if($reported_keywords.length == 0)
+    return;
+  words = new Array();
+  $.each($reported_keywords, function(index, element){
+    words.push($(element).attr("value"));
+  });
+  var request = $.post("<%= send_report_path %>", { reported_words: words });
+  $.each($("input#chkbox"), function(index, element){
+    $(element).attr("checked", false);
+    $(element).attr("is_checked", false);
+  });
+
+  request.done(function (_, _, _){
+    restoreError();
+    showFlash();
+  });
+
+  request.fail(function (_, _, _){
+    showError();
+  });
+}
+
+function showFlash(){
+  $("#report_success").css("display", "block");
+  $("#report_success").css("margin-bottom", "2px");
+  $("#report_success").css("padding-top", "6px");
+  $("#report_success").css("padding-bottom", "6px");
+  $("#report_success").css("padding-right", "12px");
+  $("#report_success").css("padding-left", "12px");
+  $("#report_success").css("position", "fixed");
+  $("#report_success").css("top", "50px");
+  $("#report_success").css("left", "42%");
+  $("#report_success").css("right", "42%");
+  $("#report_success").fadeOut(5000);
+}
+
+function showError(){
+  $("#report_failure").css("display", "block");
+  $("#report_failure").css("margin-bottom", "2px");
+  $("#report_failure").css("position", "fixed");
+  $("#report_failure").css("top", "50px");
+  $("#report_failure").css("left", "10%");
+  $("#report_failure").css("right", "10%");
+}
+
+function restoreError(){
+  $("#report_failure").css("display", "none");
+}
+
 
 function suggest_synonym_to_word(keyword_id){
 	translation = document.getElementById('<% if I18n.locale == :en %>' + 
@@ -106,6 +167,8 @@ vote_form.push('<button class="btn btn-primary" id="skip_button" type="submit" o
 vote_form.push('<% else %>');
 vote_form.push('<button class="btn btn-primary" id="skip_button" type="submit" onclick="skip_keyword()" style="margin-left: 430px;">  skip this word>></button>');
 vote_form.push('<% end %>');
+vote_form.push('<a href="#report_modal" role="button" class="btn btn-primary" onClick="modalToggle()"
+				style="margin-left: 430px;" id="launch_report"><%= t(:report) %></a>');
 vote_form.push('</div>');
 vote_form.push('</div>');
 
