first view conflict

--- a/arability/app/views/admin/add_category.html.erb
+++ b/arability/app/views/admin/add_category.html.erb
@@ -1,30 +1,41 @@
-<form method='post'>
-  <% if flash[:success] %>
-    <div class="alert alert-success">
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
-      <div>
-        <%= flash[:success] %>
+<div class="container admin">
+  <div class="row">
+    <%= render partial: "sidebar-nav", locals: {active: "add-category"} %>
+    <div class="span9 offset3">
+      <div class="tab-content">
+        <div class="tab-pane well span7 active">
+          <form method='post'>
+            <% if flash[:success] %>
+              <div class="alert alert-success">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <div>
+                  <%= flash[:success] %>
+                </div>
+              </div>
+            <% end %>
+            <% if flash[:error] %>
+              <div class="alert alert-error">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <div>
+                  <%= flash[:error][:arabic_name][0] %>
+                  <br>
+                  <%= flash[:error][:english_name][0] %>
+                </div>
+              </div>
+            <% end %>
+            <fieldset>
+              <legend>إضافة فئة جديدة</legend>
+              <input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
+              <label>إسم الفئة بالعربية</label>
+              <input type="text" placeholder="إسم الفئة" name="arabic_name">
+              <label>إسم الفئة بالإنجليزية</label>
+              <input type="text" placeholder="Name of category" name="english_name">
+              <br>
+              <button type="submit" class="btn">إضافة</button>
+            </fieldset>
+          </form>
+        </div>
       </div>
     </div>
-  <% end %>
-  <% if flash[:error] %>
-    <div class="alert alert-error">
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
-      <div>
-        <%= flash[:error][:arabic_name][0] %>
-        <br>
-        <%= flash[:error][:english_name][0] %>
-      </div>
-    </div>
-  <% end %>
-  <fieldset>
-    <legend>إضافة فئة جديدة</legend>
-    <input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
-    <label>إسم الفئة بالعربية</label>
-    <input type="text" placeholder="إسم الفئة" name="arabic_name">
-    <label>إسم الفئة بالإنجليزية</label>
-    <input type="text" placeholder="Name of category" name="english_name">
-    <br>
-    <button type="submit" class="btn">إضافة</button>
-  </fieldset>
-</form>
+  </div>
+</div>
