--- a/arability/app/views/admin/view_categories.html.erb
+++ b/arability/app/views/admin/view_categories.html.erb
@@ -1,24 +1,44 @@
-<table class="table table-striped">
-  <% if flash[:success] %>
-    <div class="alert alert-success">
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
-      <div>
-        <%= flash[:success] %>
+<div class="container admin">
+  <div class="row">
+    <%= render partial: "sidebar-nav", locals: {active: "view-categories"} %>
+    <div class="span9 offset3">
+      <div class="tab-content">
+        <div class="tab-pane well span7 active">
+            <legend>
+              <a>
+                عرض الفئات
+              </a>
+            </legend>
+            <table class="table table-striped table-hover">
+            <% if flash[:success] %>
+              <div class="alert alert-success">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <div>
+                  <%= flash[:success] %>
+                </div>
+              </div>
+            <% end %>
+            <thead>
+            <tr>
+              <th>#</th>
+              <th>إسم الفئة بالإنجليزية</th>
+              <th>إسم الفئة بالعربية</th>
+              <th>مسح</th>
+            </tr>
+            </thead>
+            <tbody>
+            <% @categories.each do |category| %>
+              <tr>
+                <th><%= category.id %></th>
+                <th><%= category.english_name %></th>
+                <th><%= category.arabic_name %></th>
+                <th><a class="btn btn-mini" href="/admin/delete_category?category_id=<%= category.id %>"><i class="icon-trash"></i></a></th>
+              </tr>
+            <% end %>
+          </tbody>
+          </table>
+        </div>
       </div>
     </div>
-  <% end %>
-  <tr>
-    <th>#</th>
-    <th>إسم الفئة بالإنجليزية</th>
-    <th>إسم الفئة بالعربية</th>
-    <th>مسح</th>
-  </tr>
-  <% @categories.each do |category| %>
-    <tr>
-    	<th><%= category.id %></th>
-    	<th><%= category.english_name %></th>
-    	<th><%= category.arabic_name %></th>
-    	<th><a class="btn btn-mini" href="/admin/delete_category/?category_id=<%= category.id %>"><i class="icon-trash"></i></a></th>
-    </tr>
-  <% end %>
-</table>
+  </div>
+</div>
